# textual-drivers

./: README.md  capability_check_app.py  pyproject.toml  sync-wiki.sh  test_app.py
.github/workflows/: publish.yml
docs/: Home.md  dnd.md  drivers.md  lock-stdin.md  register-event-handler.md
src/textual_drivers/: __init__.py  _dnd_app.py  _linux_input.py  _mixin.py  _utils.py  dnd.py  headless_driver.py  linux_driver.py  linux_inline_driver.py  windows_driver.py
src/textual_drivers/demo/: __main__.py  capability_check_app.py  dnd_kitty.py  drag_in.py  drag_out.py  helpers.py  test_app.py
tests/benchmarks/: test_dnd_hot_paths.py  test_event_handlers.py
