[project]
name = "textual-drivers"
version = "0.1.1"
description = "Drop-in Textual drivers with lock_stdin, register_event_handler, and kitty DnD support"
readme = "README.md"
authors = [
    { name = "NSPC911", email = "87571998+NSPC911@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "textual>=8.2.7",
    "wrapt>=2.2.1",
]

[project.scripts]
textual-drivers = "textual_drivers:main"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ruff>=0.15.15",
    "textual-dev>=1.8.0",
    "ty==0.0.32",
]

[tool.ruff]
force-exclude = true
exclude = []

[tool.ruff.lint]
select = [
  "ASYNC220",
  "ASYNC221",
  "ASYNC251",
  "ANN",
  "COM819",
  "C400",
  "DOC",
  "D404",
  "E",
  "F",
  "I",
  "N801", "N802", "N805",
  "PLE1142",
  "Q",
  "SIM",
  "TD",
  "W",
]
ignore = ["W505", "E501", "ANN002", "ANN003", "TD002", "TD003", "ANN401"]
preview = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
preview = true

[tool.ty.rules]
# possibly-missing-import = "ignore"
unresolved-reference = "ignore" # handled by ruff
unresolved-attribute = "ignore"
no-matching-overload = "ignore" # not that accurate
possibly-missing-attribute = "ignore" # no it is not missing
invalid-assignment = "warn" # probably already but warn for future
unused-ignore-comment = "ignore"
