[project]
name = "textual-drivers"
version = "0.6.2"
description = "Drop-in Textual drivers with lock_stdin, register_event_handler, and kitty DnD support"
readme = "README.md"
authors = [
    { name = "NSPC911", email = "87571998+NSPC911@users.noreply.github.com" }
]
requires-python = ">=3.12"
dependencies = [
    "textual>=8.2.7",
]

[project.scripts]
textual-drivers = "textual_drivers:main"

[build-system]
requires = ["uv_build>=0.11.16,<0.12.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
  "poethepoet>=0.41.0",
  "pytest>=9.1.1",
  "pytest-benchmark>=5.2.3",
  "ruff>=0.15.15",
  "textual-dev>=1.8.0",
  "ty==0.0.49",
]

[tool.ruff]
force-exclude = true
exclude = []

[tool.ruff.lint]
select = [
  "ASYNC220",
  "ASYNC221",
  "ASYNC251",
  "ANN",
  "COM819",
  "C400",
  "DOC",
  "D404",
  "E",
  "F",
  "I",
  "N801", "N802", "N805",
  "PLE1142",
  "Q",
  "SIM",
  "TD",
  "W",
]
ignore = [
  "ANN002",
  "ANN003",
  "ANN401",
  "E501",
  "E731",
  "TD002",
  "TD003",
  "W505",
]
preview = true

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
line-ending = "auto"
preview = true

[tool.ty.rules]
# possibly-missing-import = "ignore"
unresolved-reference = "ignore" # handled by ruff
unresolved-attribute = "ignore"
no-matching-overload = "ignore" # not that accurate
possibly-missing-attribute = "ignore" # no it is not missing
invalid-assignment = "warn" # probably already but warn for future
unused-ignore-comment = "ignore"

[tool.poe.tasks]
fmt.help = ""
fmt.ref = "format"
format.help = "Run ruff related formatters"
format.sequence = [ { cmd = "ruff check --unsafe-fixes --fix"}, { cmd = "ruff format"} ]

check.help = "Run all checks (type checking and linting)"
check.sequence = [ { cmd = "ty check" },{ cmd = "ruff check" } ]

drag-in.help = "Launch the drag-in demo"
drag-in.cmd = "python -m textual_drivers.demo.drag_in"
drag-in.use_exec = true

drag-out.help = "Launch the drag-out demo"
drag-out.cmd = "python -m textual_drivers.demo.drag_out"
drag-out.use_exec = true

log.help = "Launch textual's console (need rovr to be launched as dev)"
log.cmd = "textual console -x WORKER -x SYSTEM -x DEBUG -x EVENT"
log.use_exec = true
